fix label cropping

--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -124,11 +124,11 @@ md-input-container {
     z-index: 1;
     transform: translate3d(0, $input-label-default-offset + 4, 0) scale($input-label-default-scale);
     transition: transform $swift-ease-out-duration $swift-ease-out-timing-function;
+    
 
     // The max-width is necessary, because in some browsers, using this together with
     // a calc might cause it to overflow the parent. See #7403
     max-width: 100%;
-
     @include rtl(transform-origin, left top, right top);
   }
   .md-placeholder {
@@ -276,6 +276,8 @@ md-input-container {
       transform: translate3d(0, $input-label-float-offset, 0) scale($input-label-float-scale);
       transition: transform $swift-ease-out-timing-function $swift-ease-out-duration,
                   width $swift-ease-out-timing-function $swift-ease-out-duration;
+      width: calc(100% * 1.32);
+      max-width: calc(100% * 1.32);
     }
   }
 
